<resources>
    <string name="app_name">Tareas</string>
    <string name="strHombre">HOMBRE</string>
    <string name="strMujer">MUJER</string>
    <string name="strAltura">ALTURA</string>
    <string name="strPeso">PESO</string>
    <string name="strEdad">EDAD</string>
    <string name="strMinus">-</string>
    <string name="strPlus">+</string>
    <string name="strBtCalcular">CALCULAR</string>
    <string name="strComplexion">COMPLEXIÓN</string>
    <string name="strComplexionInicial">DELGADO</string>
    <string name="strResultado">Tu resultado</string>
    <string name="strBtRecalcular">RECALCULAR</string>

</resources>