                                                                                                                                                 <?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IMCActivity"
    android:background="@color/notPureBlack">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clParteSuperior"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="#3f3f3f"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cvHombre"
            android:layout_width="180dp"
            android:layout_height="160dp"
            app:cardBackgroundColor="@color/Grey"
            app:cardCornerRadius="20dp"
            android:text="Hombre"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/cvMujer">
            <LinearLayout
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                >
                <ImageView
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:src="@drawable/mgs"
                    app:tint="@color/white">
                </ImageView>
                <TextView
                    android:fontFamily="sans-serif"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/strHombre"></TextView>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvMujer"
            android:layout_width="180dp"
            android:layout_height="160dp"
            app:cardBackgroundColor="@color/DarkGrey"
            app:cardCornerRadius="20dp"
            android:text="@string/strMujer"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/cvHombre"
            >
            <LinearLayout
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                >
                <ImageView
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:src="@drawable/fgs"
                    app:tint="@color/white">
                </ImageView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/strMujer"></TextView>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvBarrita"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/Grey"
        android:layout_margin="20dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintTop_toBottomOf="@id/clParteSuperior"
        >
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:gravity="center"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:text="@string/strAltura">
        </TextView>
        <TextView
            android:id="@+id/tvAlturaNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="35sp"
            tools:text="VALOR">
        </TextView>
        <com.google.android.material.slider.RangeSlider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:valueFrom="120"
            android:valueTo="220"
            >
        </com.google.android.material.slider.RangeSlider>

    </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvPeso"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="@color/Grey"
        app:cardCornerRadius="25dp"
        app:layout_constraintTop_toBottomOf="@id/cvBarrita"
        app:layout_constraintBottom_toTopOf="@id/butCalcular"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/cvEdad">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:text="@string/strPeso"/>
            <TextView
                android:id="@+id/tvPesoNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25dp"
                tools:text="VALOR"/>
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/butMinusPeso"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:textSize="30sp"
                    android:layout_marginHorizontal="5dp"
                    android:layout_marginVertical="3dp"
                    android:text="@string/strMinus"
                    android:background="@drawable/rounded_button_blue"/>
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/butPlusPeso"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:textSize="25sp"
                    android:layout_marginHorizontal="10dp"
                    android:text="@string/strPlus"
                    android:background="@drawable/rounded_button_blue"/>

            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvEdad"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="@color/Grey"
        app:cardCornerRadius="25dp"
        app:layout_constraintTop_toBottomOf="@id/cvBarrita"
        app:layout_constraintBottom_toTopOf="@id/butCalcular"
        app:layout_constraintStart_toEndOf="@id/cvPeso"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:text="@string/strEdad"/>
            <TextView
                android:id="@+id/tvEdadNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25dp"
                tools:text="VALOR"/>
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/butMinusEdad"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:textSize="30sp"
                    android:layout_marginHorizontal="5dp"
                    android:layout_marginVertical="3dp"
                    android:text="@string/strMinus"
                    android:background="@drawable/rounded_button_blue"/>
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/butPlusEdad"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:textSize="25sp"
                    android:layout_marginHorizontal="10dp"
                    android:text="@string/strPlus"
                    android:background="@drawable/rounded_button_blue"/>

            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/butCalcular"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/Grey"
        android:text="CALCULAR"
        app:layout_constraintBottom_toBottomOf="parent">
    </androidx.appcompat.widget.AppCompatButton>



</androidx.constraintlayout.widget.ConstraintLayout>